--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
     <head>
     <link href="https://fonts.googleapis.com/css?family=Lora|Source+Sans+Pro" rel="stylesheet">
         <title>Portfolio</title>
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="dev.css">
     </head>
     <body>
         <div class="row footer1">
@@ -19,7 +19,10 @@
             <a href="https://popcode.org/?snapshot=899cd27f-7479-4d06-b033-00a537a19fc4"><img src="vendingproj.png"></a>
             <a href="https://popcode.org/?snapshot=0b219b23-2c07-4fbd-9490-bab3cc3d27ed"><img src="robotproj.png"></a>
             <a href="https://popcode.org/?snapshot=0b219b23-2c07-4fbd-9490-bab3cc3d27ed"><img src="fortuneproj.png"></a>
-            <a href="https://popcode.org/?snapshot=f0efee5a-1db3-43c9-8202-1efb2f9864cc"><img src=""></a>
+            <a href="https://popcode.org/?snapshot=f0efee5a-1db3-43c9-8202-1efb2f9864cc"><img src="holidayproj.png"></a>
+            <a href="https://popcode.org/?snapshot=a03d2127-c8f6-429b-ba68-02fd56d2cf2c"><img src="pizzaproj.png"></a>
+            <a href="https://popcode.org/?snapshot=a7e0e185-a860-4e0d-a812-036aff322a28"><img src="kanyeproj.png"></a>
+            <a href="https://popcode.org/?snapshot=00afcd28-3b69-49b4-af10-9aa9f8a50462"><img src="amandaproj.png"></a>
         </div>
 
          <div class="row footer2">
