--- a/biography.html
+++ b/biography.html
@@ -12,13 +12,12 @@
             <a href="portfolio.html" id="portfolio">Portfolio</a>
             <a href="contact.html" id="links">Contact</a>
         </div>
-        <div class="row mid">
-            <p>Jeslyn <img src="jes.jpg" class="headshot"> Tatang</p>
+        <div class="row bio">
+            <h1>About</h1>
+            <p>Twelfth grade student at Balboa High School, interested in coding and creative writing. </p>
         </div>
-        <div class="row info">
-            <p><a href="mailto:jeslyn.tatang@gmail.com">E-mail</a> 
-            <a href="https://github.com/jeslyntatang">GitHub</a> <a href="https://www.linkedin.com/in/jeslyn-tatang-30aa2b149/">LinkedIn</a></p>
         </div>
+
          <div class="row footer2">
             <p>Copyright © Tatang LLC 2018</p>
         </div>
