--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,10 @@
             <a href="contact.html">Contact</a>
         </div>
         <div class="row bio">
-            <h1>About</h1>
-            <p>Twelfth grade student at Balboa High School, interested in coding and creative writing. </p>
-        </div>
+            <h1>Contact</h1>
+            <a href="https://github.com/jeslyntatang">Github</a> 
+            <a href="mailto:jeslyn.tatang@gmail.com/">E-mail</a> 
+            <a href="https://www.linkedin.com/in/jeslyn-tatang-30aa2b149/">LinkedIn</a>
         </div>
 
          <div class="row footer2">
