--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
     <body>
         <div class="row footer1">
             <p style="font-family:lora; color:#dddd; border-bottom:1px dotted white">JESLYN TATANG</p>
-            <a href="biography.html" id="about">About Me</a>
-            <a href="portfolio.html" id="portfolio">Portfolio</a>
-            <a href="contact.html" id="links">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="biography.html">About Me</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
         </div>
         <div class="row mid">
             <p>Jeslyn <img src="jes.jpg" class="headshot"> Tatang</p>
-        </div>
-        <div class="row info">
-            <p><a href="mailto:jeslyn.tatang@gmail.com">E-mail</a> 
-            <a href="https://github.com/jeslyntatang">GitHub</a> <a href="https://www.linkedin.com/in/jeslyn-tatang-30aa2b149/">LinkedIn</a></p>
         </div>
          <div class="row footer2">
             <p>Copyright © Tatang LLC 2018</p>
