--- a/portfolio.html
+++ b/portfolio.html
@@ -7,10 +7,11 @@
     </head>
     <body>
         <div class="row footer1">
-            <p style="font-family:lora; color:#dddd; border-bottom:1px dotted white">PORTFOLIO</p>
-            <p id="about">About Me</p>
-            <p id="portfolio"><a href="portfolio.html">Portfolio</a></p>
-            <p id="links">Contact</p>
+            <p style="font-family:lora; color:#dddd; border-bottom:1px dotted white">JESLYN TATANG</p>
+            <a href="index.html">Home</a>
+            <a href="biography.html">About Me</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
         </div>
         
         <div class="row portfolio">
