--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,8 @@
         </div>
         
         <div class="row portfolio">
+            <a href="https://jeslyntatang.github.io/rockpaperscissors/"><img src="rockpaperscissorsproj.png"></a>
+            <a href="https://jeslyntatang.github.io/fanpage/"><img src="fanpageproj.png"></a>
             <a href="https://popcode.org/?snapshot=19a3d392-3ea3-4dd8-872e-6ecbebc1e651"><img src="movieseatproj.png"></a>
             <a href="https://popcode.org/?snapshot=454efd61-fffe-4ae6-94fa-85e0e91a3c56"><img src="dogproj.png"></a>
             <a href="https://popcode.org/?snapshot=899cd27f-7479-4d06-b033-00a537a19fc4"><img src="vendingproj.png"></a>
