--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="row footer1">
-            <p style="font-family:lora; color:#dddd; border-bottom:1px dotted white">JESLYN TATANG</p>
+            <p style="font-family:lora; color:#ddd; border-bottom:1px dotted white">JESLYN TATANG</p>
             <a href="index.html">Home</a>
             <a href="biography.html">About Me</a>
             <a href="portfolio.html">Portfolio</a>
