--- a/portfolio.html
+++ b/portfolio.html
@@ -15,17 +15,18 @@
         </div>
         
         <div class="row portfolio">
-            <a href="https://jeslyntatang.github.io/rockpaperscissors/"><img src="rockpaperscissorsproj.png"></a>
-            <a href="https://jeslyntatang.github.io/fanpage/"><img src="fanpageproj.png"></a>
-            <a href="https://popcode.org/?snapshot=19a3d392-3ea3-4dd8-872e-6ecbebc1e651"><img src="movieseatproj.png"></a>
-            <a href="https://popcode.org/?snapshot=454efd61-fffe-4ae6-94fa-85e0e91a3c56"><img src="dogproj.png"></a>
-            <a href="https://popcode.org/?snapshot=899cd27f-7479-4d06-b033-00a537a19fc4"><img src="vendingproj.png"></a>
-            <a href="https://popcode.org/?snapshot=0b219b23-2c07-4fbd-9490-bab3cc3d27ed"><img src="robotproj.png"></a>
-            <a href="https://popcode.org/?snapshot=0b219b23-2c07-4fbd-9490-bab3cc3d27ed"><img src="fortuneproj.png"></a>
-            <a href="https://popcode.org/?snapshot=f0efee5a-1db3-43c9-8202-1efb2f9864cc"><img src="holidayproj.png"></a>
-            <a href="https://popcode.org/?snapshot=a03d2127-c8f6-429b-ba68-02fd56d2cf2c"><img src="pizzaproj.png"></a>
-            <a href="https://popcode.org/?snapshot=a7e0e185-a860-4e0d-a812-036aff322a28"><img src="kanyeproj.png"></a>
-            <a href="https://popcode.org/?snapshot=00afcd28-3b69-49b4-af10-9aa9f8a50462"><img src="amandaproj.png"></a>
+            <a href="https://jeslyntatang.github.io/quiz/" target="_blank"><img src="buzzfeedproj.png"></a>
+            <a href="https://jeslyntatang.github.io/rockpaperscissors/" target="_blank"><img src="rockpaperscissorsproj.png"></a>
+            <a href="https://jeslyntatang.github.io/fanpage/" target="_blank"><img src="fanpageproj.png"></a>
+            <a href="https://popcode.org/?snapshot=19a3d392-3ea3-4dd8-872e-6ecbebc1e651" target="_blank"><img src="movieseatproj.png"></a>
+            <a href="https://popcode.org/?snapshot=454efd61-fffe-4ae6-94fa-85e0e91a3c56" target="_blank"><img src="dogproj.png"></a>
+            <a href="https://popcode.org/?snapshot=899cd27f-7479-4d06-b033-00a537a19fc4" target="_blank"><img src="vendingproj.png"></a>
+            <a href="https://popcode.org/?snapshot=0b219b23-2c07-4fbd-9490-bab3cc3d27ed" target="_blank"><img src="robotproj.png"></a>
+            <a href="https://popcode.org/?snapshot=0b219b23-2c07-4fbd-9490-bab3cc3d27ed" target="_blank"><img src="fortuneproj.png"></a>
+            <a href="https://popcode.org/?snapshot=f0efee5a-1db3-43c9-8202-1efb2f9864cc" target="_blank"><img src="holidayproj.png"></a>
+            <a href="https://popcode.org/?snapshot=a03d2127-c8f6-429b-ba68-02fd56d2cf2c" target="_blank"><img src="pizzaproj.png"></a>
+            <a href="https://popcode.org/?snapshot=a7e0e185-a860-4e0d-a812-036aff322a28" target="_blank"><img src="kanyeproj.png"></a>
+            <a href="https://popcode.org/?snapshot=00afcd28-3b69-49b4-af10-9aa9f8a50462" target="_blank"><img src="amandaproj.png"></a>
         </div>
 
          <div class="row footer2">
