--- a/biography.html
+++ b/biography.html
@@ -15,7 +15,8 @@
         </div>
         <div class="row bio">
             <h1>About</h1>
-            <p>Twelfth grade student at Balboa High School, interested in coding and creative writing. </p>
+            <p>Twelfth grade student at Balboa High School. </p>
+            <P>Interests: Coding, creative writing</P>
         </div>
         </div>
 
