--- a/biography.html
+++ b/biography.html
@@ -14,9 +14,11 @@
             <a href="contact.html">Contact</a>
         </div>
         <div class="row bio">
-            <h1>About</h1>
-            <p>Twelfth grade student at Balboa High School. </p>
-            <P>Interests: Coding, creative writing</P>
+            <h1>About Jeslyn</h1>
+            <p>I am a student at Balboa HIgh School and CodeNation. I value creativity, fairness, and history, 
+            and hope to inspire a more positive world outlook in those I meet. I am interested in such art
+            forms as drawing and storytelling, as well as language and global studies. I also believe in technology
+            as a tool for helping society, as well as an opportunity for creative expression.</p>
         </div>
         </div>
 
