--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
         </div>
         
         <div class="row portfolio">
+            <a href="https://jeslyntatang.github.io/playlist/" target="_blank"><img src="playlistproj.png"></a>
             <a href="https://jeslyntatang.github.io/quiz/" target="_blank"><img src="buzzfeedproj.png"></a>
             <a href="https://jeslyntatang.github.io/rockpaperscissors/" target="_blank"><img src="rockpaperscissorsproj.png"></a>
             <a href="https://jeslyntatang.github.io/fanpage/" target="_blank"><img src="fanpageproj.png"></a>
