added client proj

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
         </div>
         
         <div class="row portfolio">
+            <a href="https://jeslyntatang.github.io/clientproject/" target="_blank"><img src="clientproj.png"></a>
             <a href="https://jeslyntatang.github.io/giphy/" target="_blank"><img src="giphyproj.png"></a>
             <a href="https://jeslyntatang.github.io/ChooseYourOwnAdventure/" target="_blank"><img src="cyoaproj.png"</a>
             <a href="https://jeslyntatang.github.io/playlist/" target="_blank"><img src="playlistproj.png"></a>
